--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
@@ -133,6 +134,7 @@ android {
     defaultConfig {
         applicationId "com.zefiauthentication"
         minSdkVersion rootProject.ext.minSdkVersion
+        manifestPlaceholders = [auth0Domain: "dev-vei8ysas.us.auth0.com", auth0Scheme: "com.zefiauthentication"]
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
